changes prepared for day 2

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -11,3 +11,6 @@
     </div>
   </div>
 </div>
+<div class="footer bg-white p-2 fixed-bottom">
+  <p class="text-muted text-center font-italic">Made by James Goforth ✌️</p>
+</div>
