--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -21,3 +21,7 @@
     <% end %>
   </div>
 </div>
+
+<div class="footer bg-white p-2 fixed-bottom">
+  <p class="text-muted text-center font-italic">Made by James Goforth ✌️</p>
+</div>
