--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,9 +4,9 @@
       <div class="bg-white rounded p-3 shadow">
         <h3>Create a new list</h3>
         <%= simple_form_for @list do |f| %>
-          <%= f.input :name, placeholder: 'Drama' %>
-          <%= f.submit class: 'btn btn-flat' %>
-          <%= f.input :photo, as: :file %>
+          <%= f.input :name, placeholder: 'think of a cool name, dude' %>
+          <%= f.submit class: 'btn btn-flat p-2' %>
+          <%= f.input :photo, as: :file%>
         <% end %>
       </div>
     </div>
